add_subdirectory(dose_internal.ss)
add_subdirectory(dose_dll.ss/src)
add_subdirectory(dose_cpp.ss)
add_subdirectory(dose_main.ss)
add_subdirectory(dose_dotnet.ss/src)
add_subdirectory(dose_java.ss/src)
#add_subdirectory(/dose_ada.ss                      RelWithDebInfo

add_subdirectory(dose_sate.ss/src)
add_subdirectory(dose_dobexplorer.ss/src)
