add_subdirectory(dose_internal.ss)
#TODO LAHA add_subdirectory(dose_dll.ss/src)
#TODO LAHA add_subdirectory(dose_cpp.ss)
#TODO LAHA add_subdirectory(dose_main.ss)
#TODO LAHA add_subdirectory(dose_dotnet.ss/src)
#TODO LAHA add_subdirectory(dose_java.ss/src)
#TODO LAHA add_subdirectory(dose_sate.ss/src)
#TODO LAHA add_subdirectory(dose_dobexplorer.ss/src)
