
add_subdirectory(dots_internal.ss)
add_subdirectory(dots_kernel.ss)
add_subdirectory(dots_configuration_check.ss/src)
add_subdirectory(dots_cpp.ss)
#add_subdirectory(/dots_dotnet.ss/src               RelWithDebInfo
#add_subdirectory(/dots_ada.ss                      RelWithDebInfo
#add_subdirectory(/dots_java.ss/src                 RelWithDebInfo
add_subdirectory(dots_v.ss)

add_subdirectory(dots_test_dou.ss)

