add_subdirectory(dots_internal.ss)
add_subdirectory(dots_kernel.ss)
#TODO laha add_subdirectory(dots_configuration_check.ss/src)
#TODO laha add_subdirectory(dots_cpp.ss)
#TODO laha add_subdirectory(dots_dotnet.ss/src)
#TODO laha add_subdirectory(dots_java.ss/src)
#TODO laha add_subdirectory(dots_v.ss)
#TODO laha add_subdirectory(dots_dobmake.ss/src)

#TODO laha add_subdirectory(dots_test_dou.ss)
#TODO laha add_subdirectory(dots_test_extra_dou.ss)
#TODO laha add_subdirectory(dots_test.ss)
