#add_subdirectory(douf_dou.ss)
#add_subdirectory(douf_time_library.ss/src)
#add_subdirectory(douf_cpp.ss/src                  RelWithDebInfo   Debug
#add_subdirectory(douf_dotnet.ss/src               RelWithDebInfo
#add_subdirectory(douf_ada.ss                      RelWithDebInfo
#add_subdirectory(douf_java.ss/src                 RelWithDebInfo
#run_test_suite   src/douf/douf_test.ss/                    douf_tests
