add_subdirectory(swre_dou.ss)
add_subdirectory(swre_library.ss/src)
add_subdirectory(swre_cpp.ss/src)
add_subdirectory(swre_dotnet.ss/src)
add_subdirectory(swre_java.ss/src)
#add_subdirectory(swre_ada.ss/                     RelWithDebInfo
add_subdirectory(swre_backdoor.ss/src)

add_subdirectory(swre_test.ss)
