add_subdirectory(stop_orders_at_exit)

add_subdirectory(header_check)
add_subdirectory(test_support)
add_subdirectory(dose_test_dou.ss)
add_subdirectory(dose_test.ss)
add_subdirectory(incarnation_and_control_tests)
add_subdirectory(timestamp_operations_test)
add_subdirectory(restart_nodes)
add_subdirectory(light_nodes)
