add_subdirectory(tracer_cpp)
#add_subdirectory(tracer_backdoor)
add_subdirectory(swreport_cpp)

#TODO add_subdirectory(tracer_dotnet)
#TODO add_subdirectory(swreport_dotnet)

#if (SAFIR_ADA_SUPPORT)
#TODO    add_subdirectory(tracer_ada)
#TODO    add_subdirectory(swreport_ada)
#endif()

add_subdirectory(tracer_java)
add_subdirectory(swreport_java)

