add_subdirectory(tracer_cpp)
add_subdirectory(tracer_backdoor)
add_subdirectory(swreport_cpp)

add_subdirectory(tracer_dotnet)
add_subdirectory(swreport_dotnet)

#if (SAFIR_ADA_SUPPORT)
#add_subdirectory(tracer_ada)
#add_subdirectory(swreport_ada)
#endif()

add_subdirectory(tracer_java)
add_subdirectory(swreport_java)

