ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(cpp)
ADD_SUBDIRECTORY(dotnet)


ADD_SUBDIRECTORY(java)

#if (SAFIR_ADA_SUPPORT)
# ADD_SUBDIRECTORY(ada)
#endif ()



ADD_SUBDIRECTORY(Sequencer)
ADD_SUBDIRECTORY(StressTests)

if (UNIX)
  set(DEFAULT_DOU_SEARCH_PATH "${CMAKE_INSTALL_PREFIX}/${SAFIR_INSTALL_DESTINATION_DOU_BASE}")
  set(DEFAULT_JAVA_SEARCH_PATH "${CMAKE_INSTALL_PREFIX}/${SAFIR_INSTALL_DESTINATION_JAR}")
  set(TEST_DATA_DIRECTORY "${CMAKE_INSTALL_PREFIX}/${SAFIR_INSTALL_DESTINATION_TEST_DATA}")
else()

  #Work out our default install directory.  The reason for this stuff is that the
  #CMAKE_INSTALL_PREFIX contains "safir-sdk-core" instead of "Safir SDK Core", which is
  #not where we install by default.
  set(SAFIR_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/../Safir SDK Core")
  get_filename_component(SAFIR_INSTALL_PREFIX ${SAFIR_INSTALL_PREFIX} ABSOLUTE)

  set(DEFAULT_DOU_SEARCH_PATH "${SAFIR_INSTALL_PREFIX}/${SAFIR_INSTALL_DESTINATION_DOU_BASE}")
  set(DEFAULT_JAVA_SEARCH_PATH "${SAFIR_INSTALL_PREFIX}/${SAFIR_INSTALL_DESTINATION_JAR}")
  set(TEST_DATA_DIRECTORY "${SAFIR_INSTALL_PREFIX}/${SAFIR_INSTALL_DESTINATION_TEST_DATA}")
  unset (SAFIR_INSTALL_PREFIX) #unset the path, so noone else tries to use it!
endif()

configure_file(run_dose_tests.py.in
  "${CMAKE_CURRENT_BINARY_DIR}/run_dose_tests.py" @ONLY)

SAFIR_INSTALL_PYTHON(SCRIPT ${CMAKE_CURRENT_BINARY_DIR}/run_dose_tests.py
  COMPONENT Test)

INSTALL(
  DIRECTORY
    testcases
    output_standalone
    output_multinode
    test_config
  DESTINATION ${SAFIR_INSTALL_DESTINATION_TEST_DATA}/dose
  COMPONENT Test
  )
